Refactor code Diary